src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_MultipleRootsUnderVisualTree.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<StackPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
    Background="White">
    <ListBox>
        <ListBox.Style>
            <Style TargetType="{x:Type ListBox}">
            <Setter Property="Width" Value="100" />
            <Setter Property="Height" Value="100" />
            <Setter Property="Control.Template">
            
            <ControlTemplate>
                    <Button x:Name="myButton1" />
                    <Button x:Name="myButton2" />
            </ControlTemplate>
            
            </Setter>
            </Style>
        </ListBox.Style>
    </ListBox>
</StackPanel>

</Page>
